# kotonoha

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  package-lock.json  package.json
.claude/skills/e2e-audio-check/: SKILL.md
.claude/skills/regen-icons/: SKILL.md
.github/workflows/: release.yml
docs/: DEVELOPMENT.ja.md  DEVELOPMENT.md
src/: global.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/ja.lproj/: InfoPlist.strings
src-tauri/src/: commands.rs  config.rs  events.rs  history.rs  lib.rs  overlay.rs  pipeline.rs  state.rs  tray.rs
src-tauri/src/audio/: mic.rs  mod.rs  resample.rs  system.rs  system_catap.rs
src-tauri/src/stt/: engine.rs  mod.rs  models.rs  segmenter.rs
src-tauri/src/translate/: mod.rs  ollama.rs  queue.rs
src/lib/: ipc.ts  types.ts
src/windows/overlay/: CaptionRow.tsx  Overlay.tsx  overlay.css
src/windows/settings/: Onboarding.tsx  Settings.tsx  settings.css
