[package]
name = "kotonoha"
version = "0.1.0"
description = "ローカル完結リアルタイム文字起こし・翻訳オーバーレイ"
authors = ["daiki"]
edition = "2021"

[lib]
name = "kotonoha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.16", features = ["metal", "log_backend"] }
cpal = "0.18"
rubato = "0.16"
rtrb = "0.3"
crossbeam-channel = "0.5"
screencapturekit = "7.0.1"
tokio = { version = "1.52.3", features = ["macros"] }
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tauri-plugin-macos-permissions = "2"
chrono = "0.4.45"
cidre = { version = "0.15.2", features = ["macos_14_2"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }

# Even in dev builds, whisper.cpp / DSP must be fast enough for real-time processing
[profile.dev.package.whisper-rs-sys]
opt-level = 3
[profile.dev.package.whisper-rs]
opt-level = 3
[profile.dev.package.rubato]
opt-level = 3
